src/objects/Care_Plan_Review__c.object
<CustomObject>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Care Plan Reviews</relationshipLabel>
        <relationshipName>Care_Plan_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_present_at_review__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Client present at review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Review_Date__c</fullName>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this box is ticked, the review cannot be changed</inlineHelpText>
        <label>Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <inlineHelpText>Notes on how the review went</inlineHelpText>
        <label>Summary</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Care Plan Review</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>Review_Date__c</columns>
        <columns>Next_Review_Date__c</columns>
        <columns>Review_Completed__c</columns>
        <columns>Summary__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPR-{YY}/{MM}/{DD}-{000}</displayFormat>
        <label>Care Plan Review Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Care Plan Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>